スシ取得 All/ID指定の2APIを実装
